--- a/project.yml
+++ b/project.yml
@@ -1,5 +1,5 @@
 settings:
-  name: Cloud Sync
+  name: BlueXP copy and sync
   harmony_integration: maestro
   platform: cloud
   internal:
@@ -10,7 +10,7 @@ settings:
   rss_page: "whats-new.html"
 sidebar:
   entries:
-    - title: Cloud Sync docs
+    - title: BlueXP copy and sync docs
       url: /index.html
     - title: Release notes
       entries:
@@ -20,7 +20,7 @@ sidebar:
           url: /reference-limitations.html
     - title: Get started
       entries:
-        - title: Learn about Cloud Sync
+        - title: Learn about BlueXP copy and sync
           url: /concept-cloud-sync.html
         - title: Quick start
           url: /task-quick-start.html
@@ -40,7 +40,7 @@ sidebar:
               url: /task-installing-gcp.html
             - title: Install on a Linux host
               url: /task-installing-linux.html
-    - title: Use Cloud Sync
+    - title: Use BlueXP copy and sync
       entries:
         - title: Sync data between a source and target
           entries:
@@ -88,13 +88,13 @@ homepage:
   tiles:
     - title: Get started
       links:
-        - title: Cloud Sync overview
+        - title: BlueXP copy and sync overview
           url: concept-cloud-sync.html
         - title: Quick start
           url: task-quick-start.html
         - title: FAQ
           url: faq.html
-    - title: Use Cloud Sync
+    - title: Use BlueXP copy and sync
       links:
         - title: Create a sync relationship
           url: task-creating-relationships.html
